=== 30 ===

2002-10-30  Maciej Stachowiak  <mjs@apple.com>

	- fixed 3049853 - Javascript: setInterval incorrectly acts as single shot
	
        * kwq/KWQObject.mm:
        (QObject::startTimer): Set a recurring timer instead of
	single-shot, to match QObject semantics.

2002-10-30  Richard Williamson  <rjw@apple.com>

        More work on bidi and contextual forms.
        Table lookup code is up in WebKit. Function
        pointers are used to isolate WebCore from private
        implementation in WebKit.  Needs to be fast, so
        the usual ObjC abstraction won't work.
        
        * WebCore.exp:
        * WebCore.pbproj/project.pbxproj:
        * kwq/KWQChar.mm:
        (QChar::direction):
        * kwq/KWQString.h:
        * kwq/WebCoreUnicode.cpp: Added.
        * kwq/WebCoreUnicode.h: Added.

2002-10-30  Darin Adler  <darin@apple.com>

	- fixed crash when you open an empty window and just hit tab, tab, tab

        * kwq/KWQKHTMLPart.mm: (KWQKHTMLPart::nextKeyViewInFrame): Check for nil.

2002-10-30  Darin Adler  <darin@apple.com>

	- fixed 3083982 -- Logging into AOL gives null view, crash

	I fixed the crash part. Not the "gives null view" part.
	The key was to disentangle the references and lifetimes of the transfer job class,
	and the resource loader object that KWQ uses to connect it with WebKit.

        * kwq/KWQKJobClasses.h: Change the job to keep a loader reference, not a
	handle reference. The job needs to inform the loader when it's being deallocated.
        * kwq/KWQKJobClasses.mm: Use jobWillBeDeallocated instead of cancel when the
	job is deallocated.

        * kwq/KWQLoader.mm: (KWQServeRequest): Use KWQResourceLoader, now with a home in
	a separate file.

        * kwq/KWQResourceLoader.h: Added.
        * kwq/KWQResourceLoader.mm: Added.
        * WebCore.pbproj/project.pbxproj: Added KWQResourceLoader files.

2002-10-30  Darin Adler  <darin@apple.com>

	- fixed 3086564 -- REGRESSION: meta-refresh to the same page doesn't refresh
