@@ -345,6 +345,8 @@ public:
 
     DOMString type() const;
 
+    virtual void recalcStyle( StyleChange );
+
     long selectedIndex() const;
     void setSelectedIndex( long index );
 
